Add basic CSS and DOM manipulation to game

--- a/style.css
+++ b/style.css
@@ -1,3 +1,61 @@
-* {
+
+
+body{
     background-color: black;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items:stretch;
+    font-family: Arial, Helvetica, sans-serif;
+    max-width:max-content;
+    margin:auto;
+
+}
+
+.buttons {
+    display:flex;
+    justify-content: center;
+    gap: 10px;
+}
+.button:hover{
+    border-color: green;
+}
+
+.button {
+    color:white;
+    background-color: black;
+    display: flex;
+    padding: 10px;
+    flex-direction: column;
+    gap: 15px;
+    border: 2px solid darkgrey;
+    border-radius: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight:500;
+    font-size:large;
+}
+
+.play-image{
+    display:flex;
+    max-width: 200px;
+    height: auto;
+}
+
+.scores{
+    padding:10px;
+    display:flex;
+    justify-content: space-between;
+}
+
+.score{
+    display:flex;
+}
+
+h1{
+    align-self:center;
+}
+
+.winner{
+    font-size:50px;
+    align-self:center;
 }
